--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,3 +65,20 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation project(':jokedisplay')
 }
+
+task testGceEngine(type: GradleBuild){
+    group "Udacity Gradle Project"
+    description "This is a task to run all Android tests"
+
+    dir = "…/backend"
+
+    def backendTasks = ["appengineStart", "appengineStop"]
+
+    doFirst {
+        backendTasks[0]
+        connectedAndroidTest
+    }
+    doLast {
+        backendTasks[1]
+    }
+}
